--- a/index.html
+++ b/index.html
@@ -20,6 +20,51 @@
   <body>
 
 
+  <!-- /.c Début de la Nav bar-->
+
+  <nav class="navbar-inverse navbar-velo">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <img src="images/logo.png" alt="logo">
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#"><i class="fa fa-file-text-o" aria-hidden="true"></i> Reglement</a></li>
+          <li><a href="#"><i class="fa fa-trophy" aria-hidden="true"></i> Resultats</a></li>
+          <li><a href="#"><i class="fa fa-camera" aria-hidden="true"></i> Photos</a></li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
+
+
+  <!-- /.c Fin de Nav Bar-->
+
+
+  <!-- HEADER -->
+
+  <div id="banner">
+    <div class="fade-and-slide">
+      <h1>Trophée Assurances Vélo</h1>
+      <p>Auvergne, Bourgogne et Centre</p>
+      <br>
+      <a href="#description" class="btn btn-medium">Voir le Trophée</a>
+    </div>
+  </div>
+
+  <!-- HEADER -->
+
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   </body>
