--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>IceMe - Dégustez une glace, maintenant !</title>
+    <title>Trophée Assurances Vélo - Prenez part à la compétition</title>
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
@@ -62,6 +62,67 @@
   </div>
 
   <!-- HEADER -->
+
+  <!-- Cyclos -->
+
+  <div class="container cyclo" id="description">
+    <div class="row">
+      <h1>Les Cyclos partenaires</h1>
+
+    <div class="col-xs-12 col-md-6">
+    <div class="media">
+
+      <div class="media-body">
+        <div class="media-section">
+          <h2>La pierre chany<br> <span class="label label-warning"><%= base.statut%></span></h2>
+          <%= image_tag base.image_file %></h2>
+        </div>
+        <div class="media-section">
+          <h2>Description</h2>
+          <p><%= base.content %></p>
+        </div>
+      </div>
+
+      <div class="media-aside">
+
+        <div class="media-section">
+          <h2>Partager</h2>
+          <div class="share-links">
+            <a href="#" class="share-link bg-facebook">
+              <i class="fa fa-facebook"></i>
+            </a>
+            <a href="#" class="share-link bg-twitter">
+              <i class="fa fa-twitter"></i>
+            </a>
+          </div>
+        </div>
+
+        <div class="media-section">
+          <h2>Infos</h2>
+          <p> Grande Boucle : <strong><%= base.long_distance %></strong>
+            <br>
+            Dénivelé : <span class="label label-<%= base.color_long_distance %>"><%= base.long_differential %></span></p>
+            <br>
+            <p> Petite Boucle : <strong><%= base.small_distance %></strong>
+              <br>
+              Dénivelé : <span class="label label-<%= base.color_small_distance %>"><%= base.small_differential %></span></p>
+              <p>Date : <strong><%= base.date %></strong></p>
+              <p>Prix à partir de :<span class="label label-<%= base.price_color %>"><%= base.price %></span></p>
+              <p><br><a href="#" class="btn-medium">Plus d'info</a></p>
+            </div>
+
+          </div>
+
+        </div>
+
+
+    </div>
+
+
+    </div>
+  </div>
+
+  <!-- Cyclos -->
 
 
 
